[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Rupert Rutledge <1982481+Eosis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
argh = "0.1.4"
bit-vec = "0.6.3"
hashbrown = "0.9.1"
itertools = "0.9.0"
lazy_static = "1.4.0"
num = "0.3.1"
regex = "1.4.2"

[unstable]
linked_list_cursors = 'yes'
